# AKASHPORTFOLIO

./: .OPENCLAW_DEPLOYMENT.md  .OPENCLAW_HERALD_INTEGRATION.md  .OPENCLAW_INTEGRATION_SUMMARY.md  .OPENCLAW_LAUNCH_CHECKLIST.md  .OPENCLAW_TESTING_GUIDE.md  .env.example  .env.production.template  .gitignore  .vercelignore  AGENTS.md  API_MIGRATION_GUIDE.md  BLENDER_SCENE_SPEC.md  BUILD_SUMMARY.md  CLAUDE.md  CLEANUP_PLAN.md  COOLIFY_DEPLOY.sh  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DEPLOY_SYNTHIA.sh  EXECUTE_DEPLOY.txt  FOOTER_FIXES_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPENCLAW_ARCHITECTURE.md  OPENCLAW_FIT_ANALYSIS.md  PHASE_2_7_ROADMAP.md  PHASE_2_STRATEGY.md  PROJECT_SETUP.md  README.md  SETUP_GUIDE.md  SYNTHIA_IMPLEMENTATION_SUMMARY.md  TESTING_CHECKLIST.md  agents.md  contact.html  dashboard-prd.yaml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  (+7 more)
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.claude/: CODE_MODE_SETUP.md  FREE_MODE_TEST.md  LAND_THE_PLANE_GUIDE.md  SKILLS.md  code-mode.json  settings.json  (+1 more)
apps/onboarding-flipbook/: Cargo.toml  index.html  package.json  playwright.config.ts  sw.js  vercel.json
apps/onboarding-flipbook/e2e/: onboarding.spec.ts
apps/onboarding-flipbook/src/: main.rs
backend/: .env.example  Cargo.toml  Dockerfile  README.md  deploy-hostinger.sh  docker-compose.yml  prometheus.yml
backend/grafana-dashboards/: agent-zero-tasks.json
backend/migrations/: 001_init_audit_logs.sql  002_init_agent_tasks.sql  003_init_memory_events.sql  004_onboarding_events.sql
backend/src/: config.rs  main.rs
backend/src/api/: el_panorama.rs  mod.rs  routes.rs  site_factory.rs
backend/src/db/: schema.sql
backend/src/middleware/: mod.rs  prometheus.rs
backend/src/providers/: agent_zero.rs  composio.rs  firecrawl.rs  llm_trait.rs  mem0.rs  mod.rs
backend/tests/: el_panorama_integration.rs
(+550 files in other folders)
