[package]
name = "synthia"
version = "3.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
mime = "0.3"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
prometheus = "0.13"
opentelemetry = "0.20"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
